fixed z-index of admin panel

--- a/assets/css/admin/global.css
+++ b/assets/css/admin/global.css
@@ -6,7 +6,6 @@
     line-height: 60px;
     vertical-align: middle;
     font-size: 1.2em;
-    z-index: 2147483647;
 }
 
 #header>div div {
